--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CRUD sur la gestion du personnel",
   "main": "index.js",
   "scripts": {
-    "start": "dist/index.js",
-    "dev" : "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p ."
   },
   "repository": {
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Nomentsafiidy/apIpersonnelManagement#readme",
   "devDependencies": {
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
+    "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
